app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import url(https://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,500);
@import "bootstrap-sprockets";
@import "bootstrap";

body {
background: url('http://i.imgur.com/SMk4j0n.jpg') no-repeat center center fixed;
-webkit-background-size: cover;
-moz-background-size: cover;
-o-background-size: cover;
background-size: cover;
font-family: 'Lora', serif;
}

@mixin background-tile {
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.45);
  padding: 1.5em 1.25em;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Ubuntu', sans-serif;
  font-weight: 300;
}

.navbar {
  font-family: 'Ubuntu', sans-serif;
  text-transform: uppercase;
}
.navbar-default {
  background-color: #fff;
  padding-bottom: 5px;
  padding-top: 5px;

  .navbar-nav > li > a {
    color: #222;
    &:hover {
      color: darken(#f1c40f, 5%);
      transition: 0.5s;
    }
  }

  .navbar-header {

    .navbar-brand {
      color: #222;
      letter-spacing: 1.4px;
    }

  }

  .dropdown-menu > li > a:hover {
    background-color: darken(#f1c40f, 5%);
    color: #fff;
  }

  .navbar-nav > .open > a, .navbar-nav > .open > a:hover, .navbar-nav > .open > a:focus {
    background-color: darken(#f1c40f, 5%);
    color: #fff;
  }

}

.dropdown-menu > .active > a {
  background-color: #f1c40f;
  color: #fff;
}

.btn-custom {
  color: darken(grey, 5%);
  background-color: #fff;
  border: 1px solid darken(lightgrey, 5%);
  padding: 3.5px 9px;
  border-radius: 3.5px;
  font-family: 'Ubuntu', sans-serif;
  font-weight: 300;
  &:hover {
    text-decoration: none;
    background-color: darken(lightgrey, 5%);
    color: #fff;
    transition: 0.5s;
  }
}

.dish {
  height: 350px;
  width: 250px;
  margin-bottom: 40px;
  @include background-tile;
}

.dish-show {
  height: 475px;
  width: 325px;
  @include background-tile;
}

.dish-info {
  @include background-tile;

    .dish-title {
      margin-top: 5px;
      letter-spacing: 0px;
    }

    .dish-restaurant {
      margin-top: 20px;
    }

    .dish-category {
      margin-top: 26px;
    }

    .dish-city {
      margin-top: 0px;
    }

    .dish-price {
      margin-top: -5px;
    }

    .dish-description {
      margin-top: -6px;
    }

    .average-review-rating {
      margin-top: -7px;
      margin-bottom: 5.5px;
    }

}

.reviews {
  @include background-tile;
  margin-top: 40px;

  .reviews-headline {
    margin-top: 2.5px;
  }
  .review {
    border-bottom: 1px solid gainsboro;
    margin-bottom: 15px;
    padding-bottom: 10px;
  }

    .review-comment {
      font-size: 1.05em;
      line-height: 1.5;
    }
}

.new-dish-form {
  @include background-tile;
}

.edit-dish-form {
  @include background-tile;
}

.new-review-form {
  @include background-tile;
}

.edit-review-form {
  @include background-tile;
}

.signup-form {
  @include background-tile;
}

.login-form {
  @include background-tile;
}

#home-image {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
  // margin: 0 auto;


  // overflow: hidden;
  // z-index: 999;

}

